--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,19 @@
+annotated-types==0.6.0
+anyio==4.3.0
+click==8.1.7
+environs==11.0.0
+fastapi==0.110.2
+h11==0.14.0
+idna==3.7
 iniconfig==2.0.0
+marshmallow==3.21.1
 packaging==24.0
 pluggy==1.5.0
+pydantic==2.7.1
+pydantic_core==2.18.2
 pytest==8.1.1
+python-dotenv==1.0.1
+sniffio==1.3.1
+starlette==0.37.2
+typing_extensions==4.11.0
+uvicorn==0.29.0
