--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 annotated-types==0.6.0
 anyio==4.3.0
+certifi==2024.2.2
 click==8.1.7
+coverage==7.5.0
 environs==11.0.0
 fastapi==0.110.2
+gitdb==4.0.11
+GitPython==3.1.43
 h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.7
 iniconfig==2.0.0
 marshmallow==3.21.1
@@ -12,7 +18,9 @@ pluggy==1.5.0
 pydantic==2.7.1
 pydantic_core==2.18.2
 pytest==8.1.1
+pytest-cov==5.0.0
 python-dotenv==1.0.1
+smmap==5.0.1
 sniffio==1.3.1
 starlette==0.37.2
 typing_extensions==4.11.0
