--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python_version: '3.9'
+          python-version: '3.9'
           architecture: 'x64'
       - name: Install dependencies
         run: |
