--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -5,6 +5,28 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+          options: >-
+            --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
+          ports:
+            5432:5432
+      redis:
+        image: redis
+        env:
+          options: >-
+            --health-cmd "redis-cli ping"
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
+          ports:
+            6379:6379
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python
@@ -19,4 +41,4 @@ jobs:
       - name: Install Pytest
         run: pip install pytest pytest-cov httpx
       - name: Test Application
-        run: pytest --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+        run: APP_MODE=test pytest --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
