--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 annotated-types==0.6.0
 anyio==4.3.0
+astroid==3.1.0
+asyncio==3.4.3
 certifi==2024.2.2
 click==8.1.7
 coverage==7.5.0
+dill==0.3.8
 environs==11.0.0
 fastapi==0.110.2
 gitdb==4.0.11
@@ -12,16 +15,24 @@ httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
 iniconfig==2.0.0
+isort==5.13.2
 marshmallow==3.21.1
+mccabe==0.7.0
 packaging==24.0
+platformdirs==4.2.1
 pluggy==1.5.0
 pydantic==2.7.1
 pydantic_core==2.18.2
+pylint==3.1.0
 pytest==8.1.1
 pytest-cov==5.0.0
 python-dotenv==1.0.1
+PyYAML==6.0.1
+redis==5.0.4
+rq==1.16.1
 smmap==5.0.1
 sniffio==1.3.1
 starlette==0.37.2
+tomlkit==0.12.4
 typing_extensions==4.11.0
 uvicorn==0.29.0
