--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -34,11 +34,26 @@ jobs:
         with:
           python-version: '3.9'
           architecture: 'x64'
+          cache: 'pip'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
       - name: Install Pytest
         run: pip install pytest pytest-cov httpx
+      - name: Lint with Ruff
+        run: |
+          pip install ruff
+          ruff --output-format=github .
+        continue-on-error: true
       - name: Test Application
-        run: APP_MODE=test pytest --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+        env:
+          APP_MODE: test
+        run: pytest -v --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+      - name: Upload pytest test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-results-${{ github.run_number }}-${{ github.run_attempt }}
+          path: junit/test-results.xml
+        # Use always() to always run this step to publish test results when there are test failures
+        if: ${{ always() }}
