--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ mccabe==0.7.0
 packaging==24.0
 platformdirs==4.2.1
 pluggy==1.5.0
+psycopg2-binary==2.9.9
 pydantic==2.7.1
 pydantic_core==2.18.2
 pylint==3.1.0
@@ -32,6 +33,7 @@ redis==5.0.4
 rq==1.16.1
 smmap==5.0.1
 sniffio==1.3.1
+SQLAlchemy==2.0.29
 starlette==0.37.2
 tomlkit==0.12.4
 typing_extensions==4.11.0
