--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ certifi==2024.2.2
 click==8.1.7
 coverage==7.5.0
 dill==0.3.8
+dnspython==2.6.1
+email_validator==2.1.1
 environs==11.0.0
 fastapi==0.110.2
 gitdb==4.0.11
@@ -15,6 +17,7 @@ httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
 iniconfig==2.0.0
+install==1.3.5
 isort==5.13.2
 marshmallow==3.21.1
 mccabe==0.7.0
