--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Test Application
         env:
           APP_MODE: test
-        run: pytest -v --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+        run: pytest -v --junitxml=junit/test-results.xml --cov-report=html
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
