--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
 astroid==3.1.0
@@ -19,6 +20,8 @@ idna==3.7
 iniconfig==2.0.0
 install==1.3.5
 isort==5.13.2
+Mako==1.3.3
+MarkupSafe==2.1.5
 marshmallow==3.21.1
 mccabe==0.7.0
 packaging==24.0
@@ -36,7 +39,8 @@ redis==5.0.4
 rq==1.16.1
 smmap==5.0.1
 sniffio==1.3.1
-SQLAlchemy==2.0.29
+SQLAlchemy==2.0.30
+sqlmodel==0.0.18
 starlette==0.37.2
 tomlkit==0.12.4
 typing_extensions==4.11.0
