--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -5,34 +5,34 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    # services:
-    #   postgres:
-    #     image: postgres
-    #     env:
-    #       POSTGRES_PASSWORD: postgres
-    #       options: >-
-    #         --health-cmd pg_isready
-    #         --health-interval 10s
-    #         --health-timeout 5s
-    #         --health-retries 5
-    #       ports:
-    #         5432:5432
-    #   redis:
-    #     image: redis
-    #     env:
-    #       options: >-
-    #         --health-cmd "redis-cli ping"
-    #         --health-interval 10s
-    #         --health-timeout 5s
-    #         --health-retries 5
-    #       ports:
-    #         6379:6379
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+          options: >-
+            --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
+          ports:
+            5432:5432
+      redis:
+        image: redis
+        env:
+          options: >-
+            --health-cmd "redis-cli ping"
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
+          ports:
+            6379:6379
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: '3.11'
           architecture: 'x64'
           cache: 'pip'
       - name: Install dependencies
@@ -41,11 +41,6 @@ jobs:
           pip install -r requirements.txt
       - name: Install Pytest
         run: pip install pytest pytest-cov httpx
-      - name: Lint with Ruff
-        run: |
-          pip install ruff
-          ruff --output-format=github .
-        continue-on-error: true
       - name: Test Application
         env:
           APP_MODE: test
