--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest-4-core
+    runs-on: ubuntu-latest
     services:
       postgres:
         image: postgres
