--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ dnspython==2.6.1
 email_validator==2.1.1
 environs==11.0.0
 fastapi==0.110.2
+feedparser==6.0.11
 gitdb==4.0.11
 GitPython==3.1.43
 h11==0.14.0
@@ -37,6 +38,7 @@ python-dotenv==1.0.1
 PyYAML==6.0.1
 redis==5.0.4
 rq==1.16.1
+sgmllib3k==1.0.0
 smmap==5.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.30
