--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ asyncio==3.4.3
 certifi==2024.2.2
 click==8.1.7
 coverage==7.5.0
+crontab==1.0.1
 dill==0.3.8
 dnspython==2.6.1
 email_validator==2.1.1
 environs==11.0.0
 fastapi==0.110.2
 feedparser==6.0.11
+freezegun==1.5.1
 gitdb==4.0.11
 GitPython==3.1.43
 h11==0.14.0
@@ -34,11 +36,14 @@ pydantic_core==2.18.2
 pylint==3.1.0
 pytest==8.1.1
 pytest-cov==5.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.1
 redis==5.0.4
 rq==1.16.1
+rq-scheduler==0.13.1
 sgmllib3k==1.0.0
+six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.30
