--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ dill==0.3.8
 dnspython==2.6.1
 email_validator==2.1.1
 environs==11.0.0
+fakeredis==2.23.1
 fastapi==0.110.2
 feedparser==6.0.11
 freezegun==1.5.1
@@ -46,6 +47,7 @@ sgmllib3k==1.0.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.30
 sqlmodel==0.0.18
 starlette==0.37.2
